--- a/samples/multicore/hello_world/sample.yaml
+++ b/samples/multicore/hello_world/sample.yaml
@@ -86,3 +86,22 @@ tests:
       fixture: ppk_power_measure
       pytest_root:
         - "${CUSTOM_ROOT_TEST_DIR}/test_measure_power_consumption.py::test_measure_and_data_dump_power_consumption"
+
+  sample.multicore.hello_world.nrf54h20dk_cpuapp_cpurad_ppr.power_consumption:
+    platform_allow:
+      - nrf54h20dk_nrf54h20_cpuapp
+    integration_platforms:
+      - nrf54h20dk_nrf54h20_cpuapp
+    extra_args:
+      SB_CONF_FILE=sysbuild/nrf54h20dk_nrf54h20_cpurad_ppr.conf
+      hello_world_SNIPPET=nordic-ppr-xip
+      remote_2_DTC_OVERLAY_FILE=power_management_ppr.overlay
+      remote_DTC_OVERLAY_FILE=power_management_rad.overlay
+      hello_world_DTC_OVERLAY_FILE=power_management_app.overlay
+    build_only: false
+    # enable pytest and power measurement
+    harness: pytest
+    harness_config:
+      fixture: ppk_power_measure
+      pytest_root:
+        - "${CUSTOM_ROOT_TEST_DIR}/test_measure_power_consumption.py::test_measure_and_data_dump_power_consumption"
